  - viewer - handle hunts with bad regex better
  - viewer - change capture stats default length to 200
  - wise - UI improvements
  - wise - theatstream mode sqlite3 no longer copies the db, use sqlite3-copy for old behaviour
  - parliament - show bits instead of bytes
  - db - new reindex command
  - capture - http2 header fields were not always indexed correctly
  - moloch_update_geo.sh - fix possible security issue


2.4.0 2020/08/25
  - NOTE - RHEL/Centos 6 is no longer supported, Node 12 required
  - NOTE - New encoding of packetPos, set gapPacketPos=false for old encoding
  - NOTE - 2.4.x will be the last versions to support ES 6
  - release - node 12.18.2, glib 2.64.5, curl 7.72.0
  - release - Ubuntu 20 support
  - viewer - aes256Encryption now defaults to true
  - viewer - added a clear cache button to ES Admin tab
  - viewer - quote expressions with [ or ] in them
  - viewer - add button to only show data nodes on ES Nodes tab
  - viewer - files tab can now show the packet pos encoding
  - viewer - ES Indices tab can now show the avg doc size per index
  - viewer - ES Nodes tab can now show shards and segments per node
  - capture - http2 decoding for PRI * h2 sessions
  - capture - set http2 protocol when alpn is h2
  - capture - upgrade h2c http2 decoding
  - capture - no longer use internal libpcap function
  - capture - simple writer supports maxFileTimeM (PR #1506)
  - capture - new packetPos encoding saves 10%-20% overall ES space
  - capture - remove old disk writer methods, use simple or simple-nodirect now
  - wise - simple UI
  - wise - support json file format config files

2.3.2 2020/06/29
  - NOTE - 2.3.x will be the last version to support RHEL/Centos 6
  - release - node 10.21.0
  - capture - minor tcp dns parsing performance improvement
  - capture - refactor some code to be more type safe
  - capture - deal with bad utf8/puny in dns and altnames
  - viewer - warn at starting about missing ./vueapp/dist/index.html